fixed viewport on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.App {
-  display: flex;
+.app {
+  height: 100%;
 }
 
 .container {
   flex: 2;
-  padding: 1rem;
+  height: 100%;
 }
 
 .aside {
@@ -12,9 +12,10 @@
 }
 
 .welcome {
-  height: 100vh;
   flex-direction: column;
+  flex-grow:initial;
   display: flex;
+  padding: 1rem;
 }
 
 .gh-icon {
@@ -131,10 +132,32 @@ a:active {
   transform: scale(1.1)
 }
 
+.offwhite {
+  background-color: #f5f5f5;
+}
+
+.bg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+.bg-left {
+  transform: translateX(-100%);
+}
+
+.bg-right {
+  transform: translateX(100%);
+}
+
 section {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 8rem;
 }
 
 section>.title {
@@ -154,21 +177,27 @@ section>.title {
   margin: 1rem 1.7rem;
 }
 
+.explain-header-wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: .5rem;
+}
+
 .explain-header {
   font-size: 1.75rem;
 }
 
-.explain-header::before {
-  content: "1";
+.explain-number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.25rem;
   margin-right: .50rem;
+  flex-basis: 1.5rem;
+  height: 1.5rem;
   background-color: #00d1ac;
-  padding: .5rem 1rem;
+  padding: .25rem;
   border-radius: 200px;
-}
-
-.explain-header.two::before {
-  content: "2";
 }
 
 .explain-body {
@@ -179,11 +208,12 @@ section>.title {
   .aside {
     flex: 0;
   }
-  .welcome {
-    height: 80%;
-  }
   .name {
     font-size: 2.0rem;
+  }
+  section {
+    padding-top: 4rem;
+
   }
   .welcome-buttons-wrapper {
     flex-direction: column;
